--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "webpack": "5.22.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
